manifests/modules/aiml/deploy-monitor-genai-model/aiml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dogbooth
  labels:
    app.kubernetes.io/created-by: eks-workshop
